welcome.lessons.welcome.methods.slug.SlugTracking.scala.error
SlugTracking:10: error: value update is not a member of java.awt.Color
    else if (getCouleurSol()=Color.green && estFaceMur()==true) {
             ^